# zGogGalaxy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  set-version.ps1
.github/workflows/: release.yml
cmake/: galaxy.cmake
dependencies/: CMakeLists.txt
dependencies/galaxy/include/: GalaxyAllocator.h  GalaxyID.h  IListenerRegistrar.h  InitOptions.h
dependencies/galaxy/lib/: Galaxy.lib
dependencies/union/: CMakeLists.txt
src/: Externals.hpp  Plugin.cpp  Plugin.hpp  Sources.hpp
src/Gog/: GalaxyClient.cpp  GalaxyClient.hpp  GalaxyGlobals.hpp  GalaxyStatsManager.cpp  GalaxyStatsManager.hpp
src/Utils/: BetterDaedalusExternals.h  update.bat
